--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
-
-/* Your CSS Code here. */
+caption{
+	margin-bottom: 30px;
+	font-weight: bolder;
+	font-size: 25px;
+}
+table{
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+th, td{
+	border: 1px solid black;
+	padding: 10px;
+    text-align: center;
+}
+button {
+    height: 30px;
+    width: 200px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+	cursor: pointer;
+}
